fix: navbar menu overlap

--- a/src/ui/navbar/collapsible-menu/collapsible-menu.scss
+++ b/src/ui/navbar/collapsible-menu/collapsible-menu.scss
@@ -14,6 +14,7 @@ $available-links: 3;
     background-color: #fff;
     transform: scaleY(0);
     transform-origin: top;
+    z-index: 1051;
 
     &--open {
       transform: scaleY(1);
